--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         On with Questions...
       </h2>
 
-      <form action="" class="quiz-form text-light">
+      <form action="#" class="quiz-form text-light">
         <div class="my-5">
           <p class="lead font-weight-normal">1.Who is the current captain of Indian Cricket team?</p>
           <div class="form-check my-2 text-white-50">
