--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     </div>
   </div>
 
+  <div class="result py-4 d-none bg-light text-center">
+    <div class="comtainer lead">
+      <p>You are<span class="percentage text-primary display-4 p-3">0%</span>MASTER</p>
+    </div>
+  </div>
+
   <!-- quiz section -->
   <div class="quiz py-4 bg-primary">
     <div class="container">
@@ -59,6 +65,19 @@
                   <label class="form-check-label">VVS Laxman</label>
                 </div>
             </div>
+
+            <div class="my-5">
+                <p class="lead font-weight-normal">4.Who is VVS?</p>
+                <div class="form-check my-2 text-white-50">
+                  <input type="radio" name="q4" value="A" checked>
+                  <label class="form-check-label">Laxman</label>
+                </div>
+                <div class="form-check my-2 text-white-50">
+                    <input type="radio" name="q4" value="B">
+                    <label class="form-check-label">Tendulkar</label>
+                  </div>
+              </div>
+  
 
             <div class="text-center">
               <input type="submit" class="btn btn-light">
